--- a/package.json
+++ b/package.json
@@ -48,9 +48,9 @@
     "svgo": "^0.7.2",
     "svgo-loader": "^1.2.1",
     "url-loader": "^0.5.7",
-    "webpack": "^2.2.1",
+    "webpack": "~2.4.0",
     "webpack-dashboard": "^0.4.0",
-    "webpack-dev-server": "^2.2.1"
+    "webpack-dev-server": "~2.4.0"
   },
   "dependencies": {
     "babel-polyfill": "^6.23.0",
