--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": false,
   "license": "MIT",
-  "main": "index.js",
+  "main": "app/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server",
@@ -56,6 +56,7 @@
   "dependencies": {
     "babel-polyfill": "^6.23.0",
     "es6-promise": "^3.3.1",
+    "express": "^4.15.4",
     "googleapis": "^20.1.0",
     "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
