--- a/package.json
+++ b/package.json
@@ -55,8 +55,11 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.23.0",
+    "connect-sqlite3": "^0.9.10",
+    "dotenv": "^4.0.0",
     "es6-promise": "^3.3.1",
     "express": "^4.15.4",
+    "express-session": "^1.15.5",
     "googleapis": "^20.1.0",
     "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
