--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
     "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.24.1",
+    "material-ui": "^0.18.7",
     "node-sass": "^3.13.0",
     "postcss-loader": "^1.1.1",
     "prepush": "^3.1.11",
+    "react-tap-event-plugin": "^2.0.1",
     "redux-logger": "^2.7.4",
     "roll": "^1.2.0",
     "sass-loader": "^4.0.2",
@@ -70,7 +72,10 @@
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "redux": "^3.6.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "sequelize": "^4.4.3",
+    "sequelize-cli": "^2.8.0",
+    "sqlite3": "^3.1.9"
   },
   "description": "Easy to use initiative tracker for D&D and other games.",
   "repository": {
