--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server",
+    "dev-server": "node_modules/.bin/nodemon -e 'js,jsx'",
+    "log": "tail -f application.log | node_modules/.bin/bunyan --color",
     "dev": "webpack-dashboard -t 'Roll Initiative' -- webpack-dev-server",
     "build": "rm -rf ./build && NODE_ENV=\"production\" webpack",
     "lint-break-on-errors": "eslint ./source/js ./webpack.config.js -f table --ext .js --ext .jsx",
@@ -40,6 +42,7 @@
     "html-webpack-plugin": "^2.24.1",
     "material-ui": "^0.18.7",
     "node-sass": "^3.13.0",
+    "nodemon": "^1.11.0",
     "postcss-loader": "^1.1.1",
     "prepush": "^3.1.11",
     "react-tap-event-plugin": "^2.0.1",
@@ -57,6 +60,7 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.23.0",
+    "bunyan": "^1.8.12",
     "connect-sqlite3": "^0.9.10",
     "dotenv": "^4.0.0",
     "es6-promise": "^3.3.1",
