Database migration and seeding now runs by default on server startup.

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server",
-    "dev-server": "node_modules/.bin/nodemon index.js -e 'js,jsx'",
-    "server": "node index.js",
+    "dev-server": "node_modules/.bin/sequelize db:migrate && node_modules/.bin/sequelize db:seed:all && node_modules/.bin/nodemon index.js -e 'js,jsx'",
+    "server": "node_modules/.bin/sequelize db:migrate && node_modules/.bin/sequelize db:seed:all && node index.js",
     "log": "tail -f logs/application.log | node_modules/.bin/bunyan --color",
     "dev": "webpack-dashboard -t 'Roll Initiative' -- webpack-dev-server",
     "build": "rm -rf ./build && NODE_ENV=\"production\" webpack",
