--- a/.sequelizerc
+++ b/.sequelizerc
@@ -3,6 +3,6 @@ var path = require('path');
 module.exports = {
   'config': path.resolve('./config/config.json'),
   'migrations-path': path.resolve('./migrations'),
-  'models-path': path.resolve('./models')
+  'models-path': path.resolve('./models'),
+  'seeders-path': path.resolve('./seeders')
 }
-
