--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.24.1",
-    "material-ui": "^0.18.7",
+    "material-ui": "^1.0.0-beta.8",
+    "material-ui-icons": "^1.0.0-beta.5",
     "node-sass": "^3.13.0",
     "nodemon": "^1.11.0",
     "postcss-loader": "^1.1.1",
