--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "googleapis": "^20.1.0",
     "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
+    "lodash": "^4.17.4",
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
